<resources>
    <string name="app_name">HRApp</string>
    <string name="inn">INN: %s</string>
    <string name="kpp">KPP: %s</string>
    <string name="create_company">Create Company</string>
    <string name="create_department">Create Department</string>
    <string name="network_error">Server is unavailable</string>
    <string name="invalid_credentials">Invalid email or password</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="session_expired">Session has expired</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="add_employee">Add employee</string>
    <string name="no_employees_yet">No employees</string>
    <string name="no_departments">No departments</string>
    <string name="add_department">Add department</string>
    <string name="departments">Departments</string>
    <string name="to_add_action">Add action</string>
    <string name="no_actions">No actions</string>
    <string name="personal_information">Personal information</string>
    <string name="personal_information_data">Birth date: %s\nGender: %s\nAddress: %s\nSnils: %s\nINN: %s\nPassport: %s issued by %s at %s, </string>
    <string name="recruitment">Recruitment</string>
    <string name="salary_change">Salary Change</string>
    <string name="position_transfer">Position Transfer</string>
    <string name="department_transfer">Department Transfer</string>
    <string name="dismissal">Dismissal</string>
    <string name="logout">Logout</string>
    <string name="to_logout">Logout</string>
    <string name="edit_company">Edit Company</string>
    <string name="edit_department">Edit Department</string>
    <string name="to_edit_company">Edit Company</string>
    <string name="delete_company">Delete Company</string>
    <string name="to_edit_department">Edit Department</string>
    <string name="delete_department">Delete Department</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_company_confirmation">Do you really want to delete this company?</string>
    <string name="delete_department_confirmation">Do you really want to delete this department?</string>
    <string name="delete_employee_confirmation">Do you really want to delete this employee?</string>
    <string name="logout_confirmation">Do you really want to logout?</string>
    <string name="name">Name</string>
    <string name="employee_name">Name</string>
    <string name="empty_field_error">Field can\'t be empty</string>
    <string name="field_length_error">Field must be %d characters long</string>
    <string name="inn_length_error">INN must be 10 characters long</string>
    <string name="kpp_length_error">KPP must be 9 characters long</string>
    <string name="create">Create</string>
    <string name="to_edit">Edit</string>
    <string name="actions">Actions</string>
    <string name="inn_hint">INN (10 characters)</string>
    <string name="kpp_hint">KPP (9 characters)</string>
    <string name="add_action">Add action</string>
    <string name="reports">Reports</string>
    <string name="type">Type</string>
    <string name="generate">Generate</string>
    <string name="user_already_exist">User with such email already exists</string>
    <string name="report_filename">Report</string>
    <string name="create_employee">Add employee</string>
    <string name="gender">Gender</string>
    <string name="snils">SNILS</string>
    <string name="address">Address</string>
    <string name="passport_number">Passport Number</string>
    <string name="passport_issuer">Passport Issuer</string>
    <string name="birthdate">Birthdate</string>
    <string name="recruitment_date">Recruitment Date</string>
    <string name="position">Position</string>
    <string name="salary">Salary</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add">Add</string>
    <string name="inn_hint_employee">INN</string>
    <string name="passport_issue_date">Passport Issue Date</string>
    <string name="edit_employee">Edit Employee</string>
    <string name="to_transfer">Transfer</string>
    <string name="new_department">New Department</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="delete_action">Delete action</string>
    <string name="delete_action_confirmation">Do you really want to delete this action?</string>
    <string name="new_position">New Position</string>
    <string name="new_salary">New Salary</string>
    <string name="department">Department</string>
    <string name="delete_employee">Delete Employee</string>
    <string name="employees">Employees</string>
    <string name="invalid_email">Invalid Email</string>
</resources>
